feat: initialize core infrastructure, persistence, and security layers
- Integrate PostgreSQL with Agroal connection pooling.
- Add Flyway migration support for schema versioning.
- Implement a checkpoint mechanism to persist state after node completion.
- Implement JWT auth, CORS, and TLS configuration.
- Add global exception mapper for unified error responses